--- a/css/style.css
+++ b/css/style.css
@@ -2762,7 +2762,8 @@ h6 {
     .personal_text .personal_social li:hover a {
       background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
       background-image: linear-gradient(90deg, rgba(17,76,79,1) 0%, rgba(38,134,138,1) 35%, rgba(55,194,199,1) 100%);
-      background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%); }
+      background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+      clip-path: polygon(84% 0, 100% 17%, 88% 100%, 13% 100%, 0 16%, 14% 0); }
 
 /* End Personal Profile Area css
 ============================================================================================ */
