--- a/css/style.css
+++ b/css/style.css
@@ -1405,7 +1405,7 @@ button:focus {
   .element-wrap {
     margin-top: 30px; } }
 b, sup, sub, u, del {
-  color: #f8b600; }
+  color: #af2b2b9e; }
 
 h1 {
   font-size: 36px; }
@@ -1510,22 +1510,22 @@ h6 {
 
 .genric-btn.primary {
   color: #fff;
-  background: #f8b600;
+  background: #af2b2b9e;
   border: 1px solid transparent; }
 
 .genric-btn.primary:hover {
-  color: #f8b600;
-  border: 1px solid #f8b600;
+  color: #af2b2b9e;
+  border: 1px solid #af2b2b9e;
   background: #fff; }
 
 .genric-btn.primary-border {
-  color: #f8b600;
-  border: 1px solid #f8b600;
+  color: #af2b2b9e;
+  border: 1px solid #af2b2b9e;
   background: #fff; }
 
 .genric-btn.primary-border:hover {
   color: #fff;
-  background: #f8b600;
+  background: #af2b2b9e;
   border: 1px solid transparent; }
 
 .genric-btn.success {
@@ -1639,7 +1639,7 @@ h6 {
 .generic-blockquote {
   padding: 30px 50px 30px 30px;
   background: #fff;
-  border-left: 2px solid #f8b600; }
+  border-left: 2px solid #af2b2b9e; }
 
 @media (max-width: 991px) {
   .progress-table-wrap {
@@ -1745,7 +1745,7 @@ h6 {
   position: absolute;
   width: 14px;
   height: 14px;
-  border: 3px solid #f8b600;
+  border: 3px solid #af2b2b9e;
   background: #fff;
   top: 4px;
   left: 0;
@@ -1756,7 +1756,7 @@ h6 {
 
 .ordered-list li {
   list-style-type: decimal-leading-zero;
-  color: #f8b600;
+  color: #af2b2b9e;
   font-weight: 500;
   line-height: 1.82em !important; }
 
@@ -1767,7 +1767,7 @@ h6 {
 .ordered-list-alpha li {
   margin-left: 30px;
   list-style-type: lower-alpha;
-  color: #f8b600;
+  color: #af2b2b9e;
   font-weight: 500;
   line-height: 1.82em !important; }
 
@@ -1778,7 +1778,7 @@ h6 {
 .ordered-list-roman li {
   margin-left: 30px;
   list-style-type: lower-roman;
-  color: #f8b600;
+  color: #af2b2b9e;
   font-weight: 500;
   line-height: 1.82em !important; }
 
@@ -1839,7 +1839,7 @@ h6 {
 
 .single-input-primary:focus {
   outline: none;
-  border: 1px solid #f8b600; }
+  border: 1px solid #af2b2b9e; }
 
 .single-input-accent {
   display: block;
@@ -1893,7 +1893,7 @@ h6 {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background: #f8b600;
+  background: #af2b2b9e;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   -o-transition: all 0.2s;
@@ -1971,7 +1971,7 @@ h6 {
   left: 19px; }
 
 .primary-switch input:checked + label:before {
-  background: #f8b600; }
+  background: #af2b2b9e; }
 
 .confirm-switch {
   width: 35px;
@@ -2294,11 +2294,11 @@ h6 {
   padding-left: 20px; }
 
 .default-select .nice-select .list .option.selected {
-  color: #f8b600;
+  color: #af2b2b9e;
   background: transparent; }
 
 .default-select .nice-select .list .option:hover {
-  color: #f8b600;
+  color: #af2b2b9e;
   background: transparent; }
 
 .default-select .current {
@@ -2347,11 +2347,11 @@ h6 {
   padding-left: 45px; }
 
 .form-select .nice-select .list .option.selected {
-  color: #f8b600;
+  color: #af2b2b9e;
   background: transparent; }
 
 .form-select .nice-select .list .option:hover {
-  color: #f8b600;
+  color: #af2b2b9e;
   background: transparent; }
 
 .form-select .current {
@@ -2740,7 +2740,7 @@ h6 {
       top: 50%;
       transform: translateY(-50%);
       font-size: 20px;
-      color: #766dff; }
+      color: #38bdc2; }
   .personal_text .basic_info li:last-child {
     margin-bottom: 0px; }
 .personal_text .personal_social {
